--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <img src="./images/1.jpg" width="30%" alt="squidward">
     <img src="./images/3.jpg" width="250px" alt="Jerry">    
     <img src="./images/4.png" alt="raze">
+    <div class="up-arrow"><img src="./images/reshot-icon-up-arrow-XMEL8JGW5T.svg" alt=""></div>
     <hr>
     <table>
         <thead>
