form and css property

--- a/navbar.html
+++ b/navbar.html
@@ -17,15 +17,13 @@
     }
     header{
       background-color: white;  
+      display: flex;
+      justify-content:space-around;
+      position: sticky;
     }
     header nav p{
       font-weight: bold;
       font-size: 32px;
-      display: inline;
-      padding: 20px;
-    }
-    header nav ul{
-      display: inline;
     }
     header nav ul li{
       display: inline;
@@ -49,12 +47,6 @@
       border-radius: 2px;
       padding: 5px;
       font-size: 13px;
-    }
-    nav{
-      display: inline;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 0;
     }
     .required::after{  
       content: "*";
