--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,7 @@
       font-size: 32px;
     }
     header nav ul li{
-      display: inline;
+      display: inline-block;
       list-style-type: none;
       padding: 5px;
     }
