--- a/figma/index.html
+++ b/figma/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
+      <nav>
         <div class="logo-wrapper">
-          <img class="logo" src="./images/Vector.png" alt="Logo">
-          <span>Lasles<span id="extrabold">VPN</span></span>
-
+          <img class="logo" src="./images/Vector.png" alt="Logo" />
+          <span>Lasles<span class="extrabold">VPN</span></span>
         </div>
         <ul>
           <li><a href="">About</a></li>
@@ -23,10 +22,43 @@
           <li><a href="">Help</a></li>
         </ul>
         <ul>
-          <li><a href=""><span id="signin">Sign-in</span></a></li>
-          <li><button class="signup"><a href="">Sign-Up</a></button></li>
+          <li>
+            <a href=""><span id="signin">Sign-in</span></a>
+          </li>
+          <li>
+            <button class="signup"><a href="">Sign-Up</a></button>
+          </li>
         </ul>
       </nav>
     </header>
-</body>
+    <section class="banner">
+      <article>
+        <h1>
+          Want anything to be easy with
+          <span>Lasles<span class="extrabold">VPN</span></span>
+        </h1>
+          <p>
+            Provide a network for all your needs with ease and fun using
+            LaslesVPN discover interesting features from us.
+          </p>
+          <button class="Get-Started">Get Started</button>
+       </article>
+        <img src="./images/cover1.png" alt="">
+        
+    </section>
+    <div class="users-servers">
+        <div>
+          <img src="./images/users.png" alt="">
+          <p><span class="extrabold">90+</span> Users</p>
+        </div>
+        <div>
+          <img src="./images/location.png" alt="">
+          <p><span class="extrabold">30+</span>Locations</p>
+        </div>
+        <div>
+          <img src="./images/servers.png" alt="">
+          <p><span class="extrabold">50+</span>Servers</p>
+        </div>
+    </div>
+  </body>
 </html>
