--- a/js/todo-list.html
+++ b/js/todo-list.html
@@ -15,6 +15,7 @@
 
             createElement()
             appendChild()
+        to persist data: use localstorage
     </pre>
 
     <h1>todo lsit</h1>
